# startexchange

./: LICENSE  README.md
artifacts/competition/: competition.approval.puya.map  competition.approval.teal  competition.arc56.json  competition.clear.puya.map  competition.py
artifacts/launchpad/: launchpad.approval.puya.map  launchpad.arc56.json  launchpad.clear.puya.map  launchpad.client.py
artifacts/startup_registry/: startup_registry.approval.puya.map
startex/: .algokit.toml  README.md  startex.code-workspace
startex/.algokit/: .copier-answers.yml
startex/projects/startex-contracts/: .algokit.toml  README.md  pyproject.toml
startex/projects/startex-contracts/.algokit/: .copier-answers.yml
startex/projects/startex-contracts/smart_contracts/: __main__.py  build_all.py  metrics.py
startex/projects/startex-contracts/smart_contracts/artifacts/competition/: competition.arc56.json
startex/projects/startex-contracts/smart_contracts/artifacts/launchpad/: launchpad.approval.puya.map  launchpad.approval.teal
startex/projects/startex-contracts/smart_contracts/artifacts/startup_registry/: startup_registry.approval.teal  startup_registry.arc56.json  startup_registry.clear.puya.map  startup_registry.py
startex/projects/startex-contracts/smart_contracts/competition/: competition.py
startex/projects/startex-contracts/smart_contracts/launchpad/: launchpad.py
startex/projects/startex-contracts/smart_contracts/scripts/: build_artifacts.py
startex/projects/startex-contracts/smart_contracts/startup_registry/: startup_registry.py  startup_registry_app.py
(+26 files in other folders)
