[tool.poetry]
name = "startex-contracts"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["ahmettahirmat <210205023@ostimteknik.edu.tr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "~0"
beaker = "1.1.1"
pyteal = "0.24.1"
setuptools = "^80.9.0"
py-algorand-sdk = "^2.11.0"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

